--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Таблица с результатми выполнения: https://docs.google.com/spreadsheets/d/1EZAApkfPNNqCZg4rRpyKdpbV0AZsEJKR/edit?usp=sharing&ouid=109848788172927011472&rtpof=true&sd=true
+Таблица с результатми выполнения: 01ПИ https://docs.google.com/spreadsheets/d/1EFbk5zh6-gdM2-AYS6FQKGX86SNvblm3l-rgaM6Sp4Q/edit?usp=sharing
+								  01ПИц https://docs.google.com/spreadsheets/d/1y_tP_5nf-A9C-_0O8qLHHFohcQrt489g0iQ0_ZHgSH8/edit?usp=sharing
+								  01МХ https://docs.google.com/spreadsheets/d/1CGeL6Lu82_sHXkPwvNNIN6cztQoWgwUOBQajbUt__aA/edit?usp=sharing
