--- a/README
+++ b/README
@@ -1,3 +1,56 @@
 Таблица с результатми выполнения: 01ПИ https://docs.google.com/spreadsheets/d/1EFbk5zh6-gdM2-AYS6FQKGX86SNvblm3l-rgaM6Sp4Q/edit?usp=sharing
 				  01ПИц https://docs.google.com/spreadsheets/d/1y_tP_5nf-A9C-_0O8qLHHFohcQrt489g0iQ0_ZHgSH8/edit?usp=sharing
 				  01МХ https://docs.google.com/spreadsheets/d/1CGeL6Lu82_sHXkPwvNNIN6cztQoWgwUOBQajbUt__aA/edit?usp=sharing
+
+Вопросы для защиты:
+
+Л.Р. №1
+1. Алгоритм метода К ближайших соседей.
+2. Поиск расстояния между точками.
+3. Основной объект библиотеки Pandas.
+4. Валидация.
+5. Метрика F1 score.
+6. Нормализация.
+
+Л.Р. №2
+1. Логистическая регрессия.
+2. Сигмоид.
+3. Кросс-валидация.
+4. Матрица ошибок.
+5. Регуляризация.
+6. Обработка качественных признаков.
+
+Л.Р. № 3
+1. Решающее дерево. 
+2. Бэггинг. 
+3. Случайный лес. 
+4. Глубина дерева. 
+5. Важность признаков. 
+6. Bootstrap. 
+
+Л.Р. №4
+1. Алгоритм метода К-средних. 
+2. Параметры метода К-средних. 
+3. Задача кластеризации. 
+4. Можно ли определить кластер для нового объекта после обучения. 
+5. Группировка по углу между векторами.
+6. Как осуществляется перемещение центроидов. 
+
+Л.Р. № 5
+1. Алгоритм градиентного спуска. 
+2. Функция потерь для регрессии.
+3. Можно ли инициализировать веса нулями. 
+4. Что произойдёт при низком шаге обучения. 
+5. Что произойдёт при высоком шаге обучения.
+6. Какой минимум находит градиентный спуск.
+
+Л.Р. № 6
+1. Обоснование выбора гиперпараметров.
+
+Л.Р. № 7
+1. Параметр kernel.
+2. Параметр stride.
+3. Параметр padding.
+4. Слои pooling (subsampling).
+5. Функция softmax.
+6. Как работает слой свертки.
