--- a/README
+++ b/README
@@ -3,6 +3,7 @@ pip install numpy
 pip install pandas
 pip install scikit-learn
 pip install jupyter
+pip install matplotlib
 
 Таблица с результатми выполнения: #TODO
 
